# GBCEmulator

./: .gitignore  .travis.yml  CMakeLists.txt  GBCEmulator.sln  Jenkinsfile  buildandroidlibs.sh  conanfile.py  readme.md
GBCEmulator/: CPU.cpp  CPU.h  CPU_Opcodes.cpp  CartridgeReader.cpp  CartridgeReader.h  Debug.h  GBCEmulator.cpp  GBCEmulator.vcxproj  GBCEmulator.vcxproj.filters  GPU.cpp  GPU.h  Joypad.cpp  Joypad.h  MBC.cpp  MBC.h  Memory.cpp  Memory.h
mobile/: CMakeLists.txt  SDLWindowAndroid.cpp  SDLWindowAndroid.h  bgcolors.h  main.cpp
privacy_policy/: privacy_policy.md
profiles/: android  androidarmv7  androidarmv8  androidx86  androidx86_64
qt_wrap/: CMakeLists.txt  CMakeListss.txt  conanfile.py
qt_wrap/src/: audiodebuggerwindow.cpp  audiodebuggerwindow.h  audiodebuggerwindow.ui  debuggerwindow.cpp  debuggerwindow.h  debuggerwindow.ui  emuview.cpp  emuview.h  emuwindow.cpp  emuwindow.h  hexwidget.cpp  hexwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vramwindow.cpp  vramwindow.h  vramwindow.ui
src/: APU.cpp  APU.h  AudioNoise.cpp  AudioNoise.h  AudioSquare.cpp  AudioSquare.h  AudioWave.cpp  AudioWave.h  CPU.cpp  CPU.h  CartridgeReader.cpp  CartridgeReader.h  ColorPalette.cpp  ColorPalette.h  Debugger.cpp  Debugger.h  GBCEmulator.cpp  GBCEmulator.cpp.orig  GBCEmulator.h  GPU.cpp  GPU.h  GetUniqueColorPalette.cpp  GetUniqueColorPalette.h  Joypad.cpp  Joypad.h  JoypadInputInterface.h  JoypadXInput.cpp  JoypadXInput.h  MBC.cpp  MBC.h  Memory.cpp  Memory.h  RollingAvg.cpp  RollingAvg.h  SDLWindow.cpp  SDLWindow.h  ScreenInterface.h  SerialTransfer.cpp  SerialTransfer.h  Tile.cpp  (+3 more)
test_package/: .gitignore  CMakeLists.txt  conanfile.py
test_package/src/: UnitTests.h  group_rom_test.cpp  group_rom_test.h  individual_rom_test.cpp  individual_rom_test.h  test_unit_test.cpp
test_package/src/Fixtures/: ROMTestFixture.cpp  ROMTestFixture.h
test_package/src/Tests/: blargg_cgb_sounds.cpp  blargg_cpu_instrs.cpp  blargg_dmg_sounds.cpp  blargg_halt_bug.cpp  blargg_instr_timing.cpp  blargg_interrupt_time.cpp  blargg_mem_timing.cpp  blargg_mem_timing_2.cpp  blargg_oam_bug.cpp
test_package/src/blargg_unit_tests/cpu_instrs/: 01-special.cpp  02-interrupts.cpp  03-op_sp,hl.cpp  04-op_r,imm.cpp  05-op_rp.cpp  06-ld_r,r.cpp  07-jr,jp,call,ret,rst.cpp  08-misc_instrs.cpp  09-op_r,r.cpp  10-bit_ops.cpp  11-op_a,(hl).cpp  cpu_instrs.cpp
